67304: Cherry-pick fix for JAVA 8